3.10.3/_sources/gallery/specialty_plots/index.rst.txt


.. _sphx_glr_gallery_specialty_plots:

.. _specialty_plots_examples:

Specialty plots
===============



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Demonstrates a few common tricks with shaded plots.">

.. only:: html

  .. image:: /gallery/specialty_plots/images/thumb/sphx_glr_advanced_hillshading_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_specialty_plots_advanced_hillshading.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Hillshading</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="`Anscombe&#x27;s quartet`_ is a group of datasets (x, y) that have the same mean, standard deviation, and regression line, but which are qualitatively different.">

.. only:: html

  .. image:: /gallery/specialty_plots/images/thumb/sphx_glr_anscombe_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_specialty_plots_anscombe.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Anscombe's quartet</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Hinton diagrams are useful for visualizing the values of a 2D array (e.g. a weight matrix): Positive and negative values are represented by white and black squares, respectively, and the size of each square represents the magnitude of each value.">

.. only:: html

  .. image:: /gallery/specialty_plots/images/thumb/sphx_glr_hinton_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_specialty_plots_hinton_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Hinton diagrams</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Ishikawa Diagrams, fishbone diagrams, herringbone diagrams, or cause-and-effect diagrams are used to identify problems in a system by showing how causes and effects are linked. Source: https://en.wikipedia.org/wiki/Ishikawa_diagram">

.. only:: html

  .. image:: /gallery/specialty_plots/images/thumb/sphx_glr_ishikawa_diagram_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_specialty_plots_ishikawa_diagram.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Ishikawa Diagram</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to create the 17 segment model for the left ventricle recommended by the American Heart Association (AHA).">

.. only:: html

  .. image:: /gallery/specialty_plots/images/thumb/sphx_glr_leftventricle_bullseye_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_specialty_plots_leftventricle_bullseye.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Left ventricle bullseye</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Displays a set of subplots with an MRI image, its intensity histogram and some EEG traces.">

.. only:: html

  .. image:: /gallery/specialty_plots/images/thumb/sphx_glr_mri_with_eeg_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_specialty_plots_mri_with_eeg.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">MRI with EEG</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example creates a radar chart, also known as a spider or star chart [1]_.">

.. only:: html

  .. image:: /gallery/specialty_plots/images/thumb/sphx_glr_radar_chart_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_specialty_plots_radar_chart.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Radar chart (aka spider or star chart)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Demonstrate the Sankey class by producing three basic diagrams.">

.. only:: html

  .. image:: /gallery/specialty_plots/images/thumb/sphx_glr_sankey_basics_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_specialty_plots_sankey_basics.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">The Sankey class</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Demonstrate/test the Sankey class by producing a long chain of connections.">

.. only:: html

  .. image:: /gallery/specialty_plots/images/thumb/sphx_glr_sankey_links_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_specialty_plots_sankey_links.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Long chain of connections using Sankey</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Demonstrate the Sankey class with a practical example of a Rankine power cycle.">

.. only:: html

  .. image:: /gallery/specialty_plots/images/thumb/sphx_glr_sankey_rankine_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_specialty_plots_sankey_rankine.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Rankine power cycle</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This serves as an intensive exercise of Matplotlib&#x27;s transforms and custom projection API. This example produces a so-called SkewT-logP diagram, which is a common plot in meteorology for displaying vertical profiles of temperature. As far as Matplotlib is concerned, the complexity comes from having X and Y axes that are not orthogonal. This is handled by including a skew component to the basic Axes transforms. Additional complexity comes in handling the fact that the upper and lower X-axes have different data ranges, which necessitates a bunch of custom classes for ticks, spines, and axis to handle this.">

.. only:: html

  .. image:: /gallery/specialty_plots/images/thumb/sphx_glr_skewt_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_specialty_plots_skewt.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">SkewT-logP diagram: using transforms and custom projections</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Demonstrates the visual effect of varying blend mode and vertical exaggeration on &quot;hillshaded&quot; plots.">

.. only:: html

  .. image:: /gallery/specialty_plots/images/thumb/sphx_glr_topographic_hillshading_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_specialty_plots_topographic_hillshading.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Topographic hillshading</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/specialty_plots/advanced_hillshading
   /gallery/specialty_plots/anscombe
   /gallery/specialty_plots/hinton_demo
   /gallery/specialty_plots/ishikawa_diagram
   /gallery/specialty_plots/leftventricle_bullseye
   /gallery/specialty_plots/mri_with_eeg
   /gallery/specialty_plots/radar_chart
   /gallery/specialty_plots/sankey_basics
   /gallery/specialty_plots/sankey_links
   /gallery/specialty_plots/sankey_rankine
   /gallery/specialty_plots/skewt
   /gallery/specialty_plots/topographic_hillshading

